Add Render deployment configuration and documentation
- Added render.yaml for Render service configuration
- Added Procfile for application startup command
- Added runtime.txt to specify Python 3.11.4
- Updated requirements.txt to include groq package
- Added comprehensive deployment section to README
- Ready for one-click Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ requests==2.31.0
 beautifulsoup4==4.12.3
 soupsieve==2.5
 google-generativeai==0.4.1
+groq==0.4.1
 reportlab==4.1.0
 python-multipart==0.0.9
 tenacity==8.2.3
