--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,11 @@ services:
     name: deepdive-ai
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.4
+        value: 3.11.7
       - key: GEMINI_API_KEY
         sync: false
       - key: GROQ_API_KEY  
