--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-python-dotenv>=1.0.0
-Pillow>=10.0.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-soupsieve>=2.5
-google-generativeai>=0.3.0
-groq>=0.4.0
-reportlab>=4.0.0
-python-multipart>=0.0.6
-tenacity>=8.2.0
+# Core FastAPI dependencies
+fastapi>=0.104.0,<0.111.0
+uvicorn[standard]>=0.24.0,<0.30.0
+python-dotenv>=1.0.0,<2.0.0
+Jinja2>=3.1.0,<4.0.0
+python-multipart>=0.0.6,<0.1.0
+aiofiles>=23.2.0,<24.0.0
+
+# Authentication and Security
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
+bcrypt>=4.0.0
+
+# HTTP and Web Scraping
+requests>=2.31.0,<3.0.0
+beautifulsoup4>=4.12.0,<5.0.0
+soupsieve>=2.5,<3.0.0
 urllib3>=1.26.0,<3.0.0
-brotli>=1.1.0
+tenacity>=8.2.0,<9.0.0
+brotli>=1.1.0,<2.0.0
+
+# AI and ML Dependencies
+google-generativeai>=0.3.0,<1.0.0
+groq>=0.4.0,<1.0.0
+
+# Document Processing
+reportlab>=4.0.0,<5.0.0
+Pillow>=10.0.0,<11.0.0
 pdfminer.six>=20231228
-docx2txt>=0.8
-chardet>=5.2.0
-Jinja2>=3.1.0
-aiofiles>=23.2.0
-gunicorn>=21.0.0
+docx2txt>=0.8,<1.0.0
+chardet>=5.2.0,<6.0.0
+
+# Production Server
+gunicorn>=21.0.0,<22.0.0
+
+# Development Dependencies (optional)
+# pytest>=7.0.0
+# pytest-asyncio>=0.21.0
+# black>=23.0.0
+# flake8>=6.0.0
