--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ python-multipart>=0.0.6,<0.1.0
 aiofiles>=23.2.0,<24.0.0
 
 # Authentication and Security
+# Database
+sqlmodel>=0.0.14
+
 passlib[bcrypt]>=1.7.4
 python-jose[cryptography]>=3.3.0
 bcrypt>=4.0.0
